Roster 1.9.9: - Fixed vault tabs so they do not overlap the vault frame, preventing users from clicking on the vault log scroll bar

--- a/addons/vault/style.css
+++ b/addons/vault/style.css
@@ -14,7 +14,7 @@
 */
 
 .vault {width:755px;height:500px;background-repeat:no-repeat;text-align:left; }
-.log { position:absolute;margin-top:116px;margin-left:25px;width:700px;height:309px;overflow:auto; }
+.log { position:absolute;margin-top:116px;margin-left:25px;width:711px;height:309px;overflow:auto; }
 .vaulttab { position:absolute;margin-top:116px;margin-left:17px;width:722px;height:309px;background-repeat:repeat-x;background-image:url('images/vault-slots.png'); }
 .vaulttab .itemcol1 { float:left;margin:2px 0 0 5px;width:45px;height:309px; }
 .vaulttab .itemcol2 { float:left;margin:2px 3px 0 5px;width:45px;height:309px; }
